--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "body-parser": "^1.19.1",
+    "bootstrap": "^5.1.3",
+    "cookie-parser": "^1.4.6",
+    "jquery": "^3.6.0",
+    "multer": "^1.4.4",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
